@@ -73,6 +73,7 @@ extern int cdoChunkType;
 extern int cdoExpMode;
 
 extern int CDO_Color;
+extern int CDO_Use_FFTW;
 extern int cdoDiag;
 
 extern int cdoNumVarnames;
