@@ -6,6 +6,7 @@
 2014-04-24  Uwe Schulzweida
 
 	* Filter: segmentation fault (bug fix)
+	* Filter: filters only gridsize-1 grid cells (bug fix)
 	* setltype, chltype: added support for GRIB2
 
 2014-04-15  Uwe Schulzweida
